[package]
name = "vk_test"
version = "0.1.0"
authors = ["Matej <dobrakmato@gmail.com>"]
edition = "2018"

[features]
default = ["vulkan"]
metal = ["gfx-backend-metal"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
winit = "0.19.1"
log = "0.4.6"
simple_logger = "1.2.0"
gfx-hal = "0.2.1"
arrayvec = "0.4.10"
zerocopy = "0.2.7"
zerocopy-derive = "0.1.3"
clap = "2.33.0"
image = "0.22.1"
lz4 = "1.23.1"
byteorder = "1.3.2"
shaderc = "0.6.1"

[dev-dependencies]
matches = "0.1.8"

[dependencies.gfx-backend-vulkan]
version = "0.2.2"
optional = true

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "0.2.1"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.2.0"
optional = true